--- a/index.html
+++ b/index.html
@@ -13,97 +13,66 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
-    <section class="block container">
+    <section class="block block--dark block--skewed-right block-showcase">
       <header class="block__header">
-        <h2>Host on the Cloud to Keep Growing</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, quasi?
-        </p>
+        <h2>User-friendly Control Panel</h2>
       </header>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#easy"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Super Easy to Use</h3>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor
-            consequuntur quae quo nisi corporis omnis assumenda voluptate est
-            tenetur molestias.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <img
-          class="feature__image"
-          src="/images/easy.jpg"
-          alt="A picture of a graph"
-        />
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#computer"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">Simply Fast Websites</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            minima ullam et voluptate ipsa harum consectetur enim! Vero,
-            corrupti doloribus.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <img
-          class="feature__image"
-          src="/images/fast.jpg"
-          alt="A picture of a graph"
-        />
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#settings"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">WordPress made easy</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            minima ullam et voluptate ipsa harum consectetur enim! Vero,
-            corrupti doloribus.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <img
-          class="feature__image"
-          src="/images/wordpress.jpg"
-          alt="A picture of a graph"
-        />
-      </article>
-      <article class="grid grid--1x2 feature">
-        <div class="feature__content">
-          <span class="icon-container">
-            <svg class="icon icon--primary">
-              <use xlink:href="images/sprite.svg#clock"></use>
-            </svg>
-          </span>
-          <h3 class="feature__heading">24/7 Expert Support</h3>
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi
-            minima ullam et voluptate ipsa harum consectetur enim! Vero,
-            corrupti doloribus.
-          </p>
-          <a href="#" class="link-arrow">Learn More</a>
-        </div>
-        <img
-          class="feature__image"
-          src="/images/support.jpg"
-          alt="A picture of a graph"
-        />
-      </article>
+      <div class="container grid grid--1x2">
+        <img class="block-showcase__image" src="/images/ipad.png" alt="" />
+        <ul class="list showcase__list">
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#snap"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Easy Start & Managed Updates</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#growth"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Staging, GIT & WP-CLI</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="media">
+              <div class="media__image">
+                <svg class="icon icon--primary">
+                  <use xlink:href="images/sprite.svg#wordpress"></use>
+                </svg>
+              </div>
+              <div class="media__body">
+                <h3 class="media__title">Dynamic Caching & More</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Veniam quisquam, ex nostrum vero voluptates dicta excepturi
+                  vel perspiciatis consequuntur ab.
+                </p>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
     <script src="js/main.js"></script>
   </body>
